--- a/Page2.html
+++ b/Page2.html
@@ -9,7 +9,7 @@
         <h4>I Love You</h4>
         <h5>I Love You</h5>
         <h6>I Love You</h6>
-        <a href="mypage.html">click here to back to main page</a>
+        <a href="Page1.html">click here to back to main page</a>
     </body>
 </html>
 
