--- a/Page3.html
+++ b/Page3.html
@@ -9,6 +9,6 @@
         <h4>I Miss You</h4>
         <h5>I Miss You</h5>
         <h6>I Miss You</h6>
-        <a href="mypage.html">click here to back to main page</a>
+        <a href="Page1.html">click here to back to main page</a>
     </body>
 </html>
